Working version
---------------

### Language features:

### Runtime system:

- #1795, #9543: modernize signal handling on Linux i386, PowerPC, and s390x,
  adding support for Musl ppc64le along the way.
  (Xavier Leroy and Anil Madhavapeddy, review by Stephen Dolan)

- #9466: Memprof: optimize random samples generation.
  (Jacques-Henri Jourdan review by Xavier Leroy and Stephen Dolan)

- #9508: Remove support for FreeBSD prior to 4.0R, that required explicit
  floating-point initialization to behave like IEEE standard
  (Hannes Mehnert, review by David Allsopp)

* #9513: Selectively initialise blocks in `Obj.new_block`. Reject `Custom_tag`
  objects and zero-length `String_tag` objects.
  (KC Sivaramakrishnan, review by David Allsopp, Xavier Leroy, Mark Shinwell
  and Leo White)

- #9564: Add a macro to construct out-of-heap block header.
  (KC Sivaramakrishnan, review by Stephen Dolan, Gabriel Scherer,
   and Xavier Leroy)

- #9569: Add `Val_none`, `Some_val`, `Is_none`, `Is_some`, `caml_alloc_some`,
  and `Tag_some`.
  (Nicolás Ojeda Bär, review by Stephen Dolan, Gabriel Scherer, Mark Shinwell,
  and Xavier Leroy)

- #9619: Change representation of function closures so that code pointers
  can be easily distinguished from environment variables
  (Xavier Leroy, review by Mark Shinwell and Damien Doligez)

- #9634: Allow initial and repeated commas in `OCAMLRUNPARAM`.
  (Nicolás Ojeda Bär, review by Gabriel Scherer)

### Code generation and optimizations:

- #9441: Add RISC-V RV64G native-code backend.
  (Nicolás Ojeda Bär, review by Xavier Leroy and Gabriel Scherer)

- #9620: Limit the number of parameters for an uncurried or untupled
   function.  Functions with more parameters than that are left
   partially curried or tupled.
   (Xavier Leroy, review by Mark Shinwell)

### Standard library:

* #9554: add primitive __FUNCTION__ that returns the name of the current method
  or function, including any enclosing module or class.